[package]
name = "socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.28.2", features=["full"] }
tokio-tungstenite = { version="0.19.0" }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
url = "2.3.1"
twitch-irc = { version = "5.0.0" }
futures-channel = "0.3.28"
reqwest = { version = "0.11", features = ["json"] }
open = { version = "4.1.0" }
neovim-lib = { version = "0.6.1" }
