[package]
name = "socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.28.2", features=["full"] }
twitch-irc = { version = "5.0.0" }
chrono = { version="0.4.24", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
open = { version = "4.1.0" }
neovim-lib = { version = "0.6.1" }
